--- a/vermanubis_portfolio/requirements.txt
+++ b/vermanubis_portfolio/requirements.txt
@@ -3,6 +3,7 @@ cffi==1.14.0
 cryptography==2.9.2
 dj-database-url==0.5.0
 Django==3.0.6
+django-heroku==0.3.1
 django-rest-knox==4.1.0
 djangorestframework==3.11.0
 psycopg2==2.8.5
